utilities/Sol/modules/grammars/ide/src/test/resources/cocos/valid/NameFormatConfigurationType.ide
package valid

typedef configuration NameFormatConfigurationType {
    label "Some nice Configuration Type"

    backend task main
}
