utilities/Sol/modules/grammars/ide/src/test/resources/cocos/invalid/CircularDependencyConfigurationComponent.ide
package invalid

typedef component configuration CircularDependencyConfigurationComponent {
    label "Some Configuration"

    configuration sub: CircularDependencyConfiguration {

    }

    backend task main
}
